# rye-python-template

./: pyproject.toml
