[project]
name = "untitled"
version = "0.1.0"
dependencies = []
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = ["ALL"]
ignore = ["CPY", "EXE", "T20", "E203", "E501"]

[tool.mypy]
strict = true

[tool.ruff.pydocstyle]
convention = "google"

[tool.rye]
managed = true
dev-dependencies = [
    "black~=23.3.0",
    "pytest~=7.3.2",
    "ruff>=0.0.287",
    "mypy>=1.5.1",
]

[tool.rye.scripts]
format = { chain = ["black src", "ruff check --fix src"] }
lint = { chain = ["black --check src", "ruff check src", "mypy src"] }
test = { chain = ["python -m pytest tests"] }

[tool.hatch.metadata]
allow-direct-references = true
